@@ -1,3 +1,8 @@
+Development Portal (2015-11-11 shi)
+==============================
+Fixed related document list CSS
+
+
 Development Portal (2015-11-10 shi)
 ==============================
 SAVi results CSS to include new attributes
